--- a/gopnik.html
+++ b/gopnik.html
@@ -421,6 +421,7 @@ small{ display:block; margin-top:10px; }
 
 <script>
 
+window.addEventListener("DOMContentLoaded", () => {
   // ===== DOM refs =====
 const loading = document.getElementById("loading");
 const bgMusic = document.getElementById("bgMusic");
@@ -792,6 +793,7 @@ window.addEventListener("load", () => {
 
 </body>
 </html>
+
 
 
 
