--- a/gopnik.html
+++ b/gopnik.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Slav Clicker</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="gobnik.css">
 </head>
 
 <body>
@@ -111,6 +111,7 @@
   </div>
 
   <!-- JS -->
-  <script src="game.js"></script>
+  <script src="gopnik.js"></script>
 </body>
 </html>
+
