--- a/gopnik.html
+++ b/gopnik.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Slav Clicker</title>
-  <link rel="stylesheet" href="gobnik.css">
+ <link rel="stylesheet" href="gopnik.css">
 </head>
 
 <body>
@@ -114,4 +114,5 @@
   <script src="gopnik.js"></script>
 </body>
 </html>
+
 
